[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-nory"
version = "0.1.0"
description = "LangChain tools for x402 payments - let agents pay for APIs autonomously"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nory", email = "hello@noryx402.com"}
]
keywords = [
    "langchain",
    "ai-agents",
    "payments",
    "x402",
    "solana",
    "usdc",
    "micropayments",
    "autonomous-agents",
    "crewai",
    "autogpt"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Payment Systems",
]
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.1.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://noryx402.com"
Documentation = "https://noryx402.com/docs"
Repository = "https://github.com/TheMemeBanker/langchain-nory"
Issues = "https://github.com/TheMemeBanker/langchain-nory/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
